--- a/{{cookiecutter.github_repo}}/requirements.txt
+++ b/{{cookiecutter.github_repo}}/requirements.txt
@@ -1,9 +1,13 @@
-atomicwrites==1.3.0
-attrs==18.2.0
-Click==7.0
-more-itertools==6.0.0
-pluggy==0.8.1
-py==1.7.0
-pytest==4.2.0
-pytest-testdox==1.0.1
-six==1.12.0
+atomicwrites==1.4.0
+attrs==20.1.0
+click==7.1.2
+iniconfig==1.0.1
+more-itertools==8.4.0
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.0.1
+pytest-testdox==2.0.0
+six==1.15.0
+toml==0.10.1
